--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -13,7 +13,7 @@
 }
 
 .content {
-    width: 65vw;
+    width: 60vw;
 
     @media screen and (max-width: 600px) {
         width: 75vw;
