--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -9,7 +9,7 @@
     width: 25vw;
     background-color: $lighter-blue;
     overflow-y: scroll;
-    padding: 10vh 25px;
+    padding: 10vh 35px;
     display: flex;
     flex-direction: column;
 
